--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
+    "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -31,6 +32,7 @@
     "@mui/utils": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
     "@tabler/icons-react": "^2.47.0",
+    "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.46.2",
     "dotenv": "^16.4.5",
@@ -38,6 +40,7 @@
     "firebase": "^11.0.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.6",
+    "jsdom": "^25.0.1",
     "material-ui-popup-state": "^5.0.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -82,6 +85,8 @@
     "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.23.10",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
@@ -94,6 +99,7 @@
     "immutable": "^4.3.5",
     "prettier": "^3.2.5",
     "react-error-overlay": "6.0.11",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "vitest": "^2.1.6"
   }
 }
