--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "cross-spawn": "7.0.5",
     "braces": "3.0.3",
     "micromatch": "4.0.8",
-    "vite": "5.2.14",
+    "vite": "^5.4.11",
     "rollup": "4.22.4"
   }
 }
