--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.5",
-    "vite": "5.2.14",
+    "vite": "^5.2.10",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
