--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -29,6 +29,7 @@ jobs:
 
   notify-slack:
     runs-on: ubuntu-latest
+    needs: trigger-ci
     steps:
       - name: Send Notification to Slack
         uses: slackapi/slack-github-action@v2.0.0
